# chaosircd

./: CMakeLists.txt  INSTALL  Makefile.in  README  autogen.sh  build.mk.in  cfg-android.sh  cfg-autotools.sh  cfg-cmake.sh  cfg-linux.sh  cfg.sh  config.guess  config.h.cmake  config.h.in  config.mk.in  config.sub  configure  configure-android-arm.sh  configure-android.sh  configure.ac  configure.in  m4  mkinstalldirs  rename.sh
CMakeModules/: ConfigDlFcn.cmake  FindBISON.cmake  FindFLEX.cmake
cmake/: ConfigGNUVars.cmake
conf/: Makefile.in  cgircd.sql  children.conf.in  classes.conf.in  inis.conf.in  ircd.conf.in  ircd.motd  logs.conf.in  modules.conf.in  opers.conf.in  proxy.ini  ssl.conf.in
contrib/: Makefile.in  dumpcode.c  shellcode.asm  shellcode.h  sploit.c  syscalls.inc
doc/: Makefile.in
include/: Makefile.in
lib/: CMakeLists.txt  Makefile.in  build.mk.in  config.h.cmake  config.mk.in  configure.ac  configure.in
lib/CMakeModules/: BuildShared.cmake  BuildSharedLibs.cmake  BuildSharedModules.cmake  ConfigBuildType.cmake  ConfigGNUVars.cmake  ConfigIntTypes.cmake  ConfigMathLib.cmake  ConfigSharedLib.cmake  ConfigSockets.cmake  ConfigStdIncludes.cmake  DllExt.cmake  FindMySQL.cmake  FindPostgreSQL.cmake  PlatformChecks.cmake  SubstituteProjectIncludes.cmake  UseFreeType.cmake  UseLibOWFAT.cmake  UseMySQL.cmake  UseOpenSSL.cmake
lib/include/: Makefile.in
lib/include/libchaos/: cfg.h  child.h  config.h.cmake  config.h.in  connect.h  db.h  defs.h  divdi3.h  dlink.h  filter.h  font_6x10.h  font_8x13.h  font_8x13b.h  gif.h  graph.h  hook.h  htmlp.h  httpc.h  image.h  image_defpal.h  ini.h  io.h  listen.h  log.h  mem.h  mfile.h  module.h  net.h  queue.h  sauth.h  ssl.h  stamp-h2  str.h  syscall.h  template.h  timer.h  ttf.h
lib/include/msinttypes/: inttypes.h  stdint.h
lib/m4/: Makefile.in  chaos.m4  dlfcn.m4  dylib.m4  efence.m4  ft2.m4  funcs.m4  hack.m4  libchaos.m4  libowfat.m4  mysql.m4  program.m4  psql.m4  sgui.m4  sqlite.m4  ssl.m4  summary.m4  werror.m4
lib/servauth/: CMakeLists.txt  Makefile.in  auth.c  auth.h  cache.c  cache.h  commands.c  commands.h  control.c  control.h  dns.c  dns.h  proxy.c  proxy.h  query.c  query.h  servauth.c  servauth.h  userdb.c  userdb.h
lib/src/: Makefile.in  cfg.c  child.c  connect.c  db.c  divdi3.c  dlfcn.h  dlfcn_darwin.c  dlfcn_win32.c  dlink.c  filter.c  gif.c  graph.c  hook.c  htmlp.c  httpc.c  image.c  ini.c  io.c  listen.c  log.c  mem.c  mfile.c  module.c  net.c  queue.c  sauth.c  ssl.c  str.c  syscall.c  timer.c  ttf.c
lib/test/: CMakeLists.txt  Makefile.in  cfgtest.c  dbtest.c  giftest.c  graphtest.c  imagetest.c  strtest.c  ttftest.c
libchaos/: CMakeLists.txt  Makefile.in  aclocal.m4  build.mk.in  config.h.cmake  config.h.in  config.mk.in  configure  configure.in  libchaos.dev  libchaos.mak
libchaos/CMakeModules/: ConfigDlFcn.cmake  ConfigGNUVars.cmake  ConfigMathLib.cmake  PlatformChecks.cmake  SubstituteProjectIncludes.cmake
libchaos/cmake/: ConfigBuildType.cmake  ConfigDlFcn.cmake  ConfigIntTypes.cmake  ConfigMathLib.cmake  ConfigSharedLib.cmake  ConfigSockets.cmake  ConfigStdIncludes.cmake  PlatformChecks.cmake  SubstituteProjectIncludes.cmake
libchaos/include/libchaos/: Makefile.in  cfg.h  child.h  config.h.cmake  config.h.in  connect.h  db.h  defs.h  dlink.h  filter.h  font_6x10.h  font_8x13b.h  gif.h  graph.h  hook.h  htmlp.h  httpc.h  image.h  image_defpal.h  ini.h  io.h  listen.h  log.h  mem.h  mfile.h  module.h  net.h  queue.h  sauth.h  ssl.h  str.h  syscall.h  template.h  timer.h  ttf.h
libchaos/include/msinttypes/: inttypes.h  stdint.h
libchaos/m4/: color.m4  debug.m4  dep.m4  dylib.m4  funcs.m4  hack.m4  libpng.m4  library.m4  maintainer.m4  modules.m4
libchaos/servauth/: CMakeLists.txt  Makefile.in  auth.c  auth.h  cache.c  cache.h  commands.c  commands.h  control.c  control.h  dns.c  dns.h  proxy.c  proxy.h  query.c  query.h  servauth.c  servauth.h
libchaos/src/: Makefile.in  cfg.c  child.c  connect.c  db.c  divdi3.c  dlfcn.h  dlfcn_darwin.c  dlfcn_win32.c  dlink.c  filter.c  gif.c  graph.c  hook.c  htmlp.c  httpc.c  image.c  ini.c  io.c  listen.c  log.c  mem.c  mfile.c  module.c  net.c  queue.c  sauth.c  ssl.c  str.c  syscall.c  timer.c  ttf.c
libchaos/test/: CMakeLists.txt  Makefile.in  cfgtest.c  dbtest.c  giftest.c  graphtest.c  imagetest.c  strtest.c  ttftest.c
libowfat/: CAS.h  GNUmakefile.orig  Makefile  array.h  buffer.h  byte.h  case.h  cdb.h  cdb_make.h  dns.h  errmsg.h  errmsg_int.h  fmt.h  havealloca.h  iarray.h  io.h  io_internal.h  iob.h  iob_internal.h  iopause.h  ip4.h  ip6.h  isset.h  mmap.h  ndelay.h  open.h  openreadclose.h  rangecheck.h  readclose.h  safemult.h  scan.h  select.h  socket.h  str.h  stralloc.h  t.c  tai.h  taia.h  textcode.h  (+19 more)
modules/: CMakeLists.txt  Makefile.in  import-modules.sh
modules/chanmode/: Makefile.in  cm_ahalfop.c  cm_alarm.c  cm_aop.c  cm_avoice.c  cm_ban.c  cm_deny.c  cm_except.c  cm_halfop.c  cm_invex.c  cm_invite.c  cm_key.c  cm_limit.c  cm_moderated.c  cm_noext.c  cm_op.c  cm_persistent.c  cm_secret.c  cm_topic.c  cm_voice.c
modules/lclient/: Makefile.in  lc_clones.c  lc_cookie.c  lc_crowdguard.c  lc_mflood.c  lc_sauth.c
modules/msg/: Makefile.in  m_away.c  m_burst.c  m_cap.c  m_capab.c  m_connect.c  m_die.c  m_dump.c  m_error.c  m_geolocation.c  m_gline.c  m_help.c  m_info.c  m_invite.c  m_ison.c  m_join.c  m_kick.c  m_kill.c  m_kline.c  m_links.c  m_list.c  m_lusers.c  m_mode.c  m_module.c  m_motd.c  m_msg.c  m_names.c  m_nbounce.c  m_nclock.c  m_nick.c  m_njoin.c  m_nmode.c  m_nquit.c  m_nserver.c  m_nservice.c  m_ntopic.c  m_nuser.c  m_omode.c  m_opart.c  m_oper.c  (+22 more)
modules/service/: Makefile.in  sv_sbb.c
modules/stats/: Makefile.in  st_traffic.c
modules/usermode/: Makefile.in  um_client.c  um_crowdguard.c  um_invisible.c  um_operator.c  um_paranoid.c  um_servnotice.c  um_wallops.c
src/: CMakeLists.txt  Makefile.in  chanmode.c  channel.c  chanuser.c  chars.c  class.c  client.c  conf.c  ircd.c  ircd.l  ircd.y  lclient.c  main.c  msg.c  numeric.c  oper.c  server.c  service.c  user.c  userdb.c  usermode.c
(+526 files in other folders)
